<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kiwi.auready.login.LoginFragment"
    android:weightSum="10">

    <!-- todo Add the introduction or tutorial of App -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:textSize="50sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="A U READY"/>

    <LinearLayout
        android:id="@+id/layout_localAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_login_ed_margin"
            android:gravity="center"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_login_ed_margin"
            android:gravity="center"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/bt_login_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login_button"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/bt_signup_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_bt_signup"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/fragment_login_signup_margin"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>
