<resources>
    <string name="app_name">AUReady</string>

    <string name="login">Login</string>

    <!-- Login Fragment -->
    <string name="login_button">LOGIN</string>
    <string name="logout_button">로그아웃</string>
    <string name="fragment_login_bt_signup">You have not an account yet?</string>
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_password">비밀번호</string>

    <!-- Signup Fragment -->
    <string name="signup_complete_button">SIGNUP</string>
    <string name="login_hint_name">이름</string>

    <string name="signup_fail_message">Signup is failed</string>
    <string name="email_empty_err">name is empty</string>
    <string name="email_format_err">name format is invalid</string>
    <string name="password_empty_err">password is empty</string>
    <string name="signup_fail_message_404">You are already registered</string>
    <string name="login_fail_message_400">login failed. Input the correct id or password</string>
    <string name="login_fail_message_401">login failed.</string>
    <string name="login_fail_message_onfailure">Called onFailure()</string>
    <string name="login_success_msg">Login succeed</string>

    <!-- Tasks Activity -->
    <string name="logged_in_user_name">user name</string>
    <string name="logged_in_user_email">user email</string>

    <!-- Friend Fragment -->
    <string name="no_searched_email_msg">Nobody who you are searching</string>
    <string name="friend_menu_item">FRIEND</string>
    <string name="alert_title_confirm_delete_friend">Confirm Delete Friend</string>
    <string name="alert_msg_confirm_delete_friend">Do you want to delete </string>
    <string name="alert_positive_button">OK</string>
    <string name="alert_negative_button">CANCEL</string>
    <string name="signup_success_msg"> 님 가입하셨습니다.</string>
    <string name="loading_friends">LOADING...</string>
    <string name="no_friends_msg">ㅜㅠ... 새 친구를 추가해주세요!</string>
    <string name="action_open_findview">FIND</string>
    <string name="add_friend_success_msg">is added to FriendList</string>
    <string name="nav_account_settings">ACCOUNT</string>
    <string name="personal_menu_item">PERSONAL</string>
    <string name="group_menu_item">GROUP</string>
    <string name="nav_header_name_guest">GUEST</string>
    <string name="add_taskview">+ ADD NEW TASK</string>
    <string name="no_taskheads">You have no TO-DOs!</string>
    <string name="edit_tasks_ab_title">EDIT TASKS</string>
    <string name="add_tasks_ab_title">NEW TASKS</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="no_tasks">No Tasks. Add new task!</string>
    <string name="taskhead_empty_err">empty tasks and title</string>
    <string name="menu_title">TITLE</string>
    <string name="edit_title">EDIT TITLE</string>
    <string name="edit_task">EDIT</string>
    <!-- Server Client ID. This should be a valid web oauth 2.0 client id obtained
    from  https://console.developers.google.com/ -->
    <string name="google_server_client_id">40132084235-d35aomfismjre6uc5pg8uac6f1vd3ja8.apps.googleusercontent.com</string>
    <string name="add_taskhead">+ ADD TASK LIST</string>
    <string name="menu_create">Create</string>
    <string name="taskheadsetting_title">Setting Task List</string>
    <string name="taskheaddetail_title">Title</string>
    <string name="member_title">Members</string>
    <string name="label_title">Label</string>
    <string name="choose_label_bt">+ Choose a Label</string>
    <string name="empty_taskhead_message">TASKHEAD cannot be empty!</string>
    <string name="add_member">Add member</string>
    <string name="delete_member">Delete member</string>
    <string name="action_confirm">Complete</string>
    <string name="network_error">Network connection error</string>

    <string name="delete">delete</string>
    <string name="item_selected">selected</string>
    <string name="friend_title">Friends</string>
    <string name="complete">Complete</string>
    <string name="color_picker_default_title">Select a Color</string>

    <string name="color_swatch_description_selected">Color selected</string>
    <string name="color_swatch_description">color</string>
    <string name="addfriend_fail_msg_onfailure">Fail to request friending</string>
    <string name="nav_logout">LOGOUT</string>
    <string name="logout_fail_msg">Failed to logout</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="social_signup_fail_msg">%s Signup Failed</string>
    <string name="notification">notification</string>
    <string name="no_notification">no notification</string>
    <string name="menu_done">DONE</string>
    <string name="find_email_empty_error">Input Email or Name string</string>
    <string name="addfriend_fail_msg_exist">this relationship already exists</string>
    <string name="no_notification_txt">No notification</string>
    <string name="accept_friend_request_txt">Accept</string>
    <string name="delete_friend_request_txt">Delete</string>
    <string name="friend_request_accept">%s is added to your friend list</string>
    <string name="need_to_connect_network">Please connect network, you can read-only without network</string>
    <string name="need_to_login">Please Login</string>
    <string name="auready_settings">settings</string>
    <string name="bt_logout">LOGOUT</string>
    <string name="settings_title">Settings</string>
    <string name="find_title">Find</string>
    <string name="connect_network_dialog">No Internet Connection</string>

</resources>
