<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kiwi.auready.login.LoginFragment">


    <LinearLayout
        android:id="@+id/layout_localAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_login_ed_margin"
            android:gravity="center"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_login_ed_margin"
            android:gravity="center"
            android:hint="@string/login_hint_name" />

        <EditText
            android:id="@+id/ed_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_login_ed_margin"
            android:gravity="center"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/bt_signup_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/signup_complete_button"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>
